--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,18 +6,18 @@
 :root{
     --primary: #8A1E41;
     --gray:#e1d7da;
+    --blue:#194C69;
 }
 body{
     background-color: var(--gray) !important;
 }
 header{
-    height:200vh ;
+    height:195vh ;
     width: 100%;
-    /* background-repeat: no-repeat; */
-    /* object-fit: cover; */
-    /* background-size: cover; */
-    /* background-image: url(../images/WhatsApp\ Image\ 2025-06-18\ at\ 2.21.13\ PM.jpeg); */
-}
+     /* background-repeat: no-repeat;  */
+     background-size: cover;
+    /* background-image: url(assets/images/headerimg.jpeg); */
+} 
 .headerImg{
     height: 200vh;
     width: 100%;
@@ -27,9 +27,10 @@ header{
 .lineNav{
     height: 30px;
     width: 2.5px;
-    background-color: rgb(183, 53, 53);
-    /* text-align: center; */
+    background-color:var(--primary);
+    
 }
+
 /* ............section Crafts................. */
 .title{
     margin-top: 50px;
@@ -42,6 +43,7 @@ header{
     text-align: center;
         color:var(--primary);
 }
+/* ....... */
 .images{
     height: 250px;
     /* border-radius: 567890px; */
@@ -75,20 +77,18 @@ header{
     width: auto;
     height: 500px;
  }  */
-   /* خلفية رمادية للقسم */
+
 .bggray {
-  background-color: var(--gray); /* رمادي فاتح */
+  background-color: var(--gray); 
 }
 
-/* حجم الكرت داخل الـ scroll */
+
 .widths {
-  /* min-width: 1px; */
   flex: 0 0 auto;
   box-shadow: 1px 1px 14px var(--primary);
   border-radius: 30px !important;
 }
 
-/* ضبط صور المنتجات */
 .imgStore {
   height:320px;
   object-fit: cover;
@@ -98,9 +98,67 @@ header{
   
 }
 
-/* اختيارية: إذا حبيت تنسّق عنوان القسم */
 .title {
   text-align: center;
   margin-top: 20px;
   /* font-weight: bold; */
 }
+
+
+/* ...........footer.......... */
+.Footer .flex{
+    gap: 20px;
+     align-items: flex-start;
+     padding-top: 30px;
+     display: flex;
+   
+}
+.Footer div{
+    width:100%;
+}
+.Footer div i {
+    font-size:15px;
+    padding:5px;
+    
+}
+.Footer {
+    background-color:var(--blue);
+    padding: 0 30px 0 30px;
+    color:white;
+
+   
+}
+.Footer h3{
+    padding-bottom: 0px;
+    font-size: 20px;
+}
+.Footer ul a{
+    font-weight: lighter;
+    color: white !important;
+   
+
+}
+.Footer ul li{
+    padding-bottom: 5px;
+}
+    .Footer .btn{
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    margin-top: 10px;
+    background-color: var(--primary);
+}
+input[type="email"]{
+    background-color:var(--gray);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    padding: 8px 55px 8px 5px;
+border: none;
+}
+
+
