--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ body{
   align-items: center;
   z-index: 100;
   position: absolute;
-  top:300px;
-  left:250px;
+  top:250px;
+  left:250px ;
 background-color: rgba(240, 231, 231, 0.5);
   border-radius: 20px;
   padding: 30px;
@@ -34,11 +34,11 @@ background-color: rgba(240, 231, 231, 0.5);
     color: white;
   }
 }
-#carouselExampleIndicators{
-  position: relative !important;
+.homeHeader{
+  position: relative;
 }
 
-/* ......................navhar......................... */
+/* ........................navhar......................... */
 .lineNav{
     height: 25px;
     width: 2.5px;
@@ -63,9 +63,8 @@ background-color: rgba(240, 231, 231, 0.5);
     font-size: 30px;
  
     }
-    /* .navbar-toggler {
-      margin-left: 30px !important;
-    } */
+ 
+
 /* ..................section Crafts................................... */
 .title{
     margin-top: 50px;
@@ -180,7 +179,7 @@ border: none;
     width: 60px;
     height: 60px;
 }
-/* ............... */
+/* ..................Reviews section................................ */
   .Reviews .card{
  text-align: start;
  padding:20px;
@@ -235,28 +234,22 @@ border: none;
   margin: auto;
   padding: 40px 20px;
 }
-
   .Reviews .flex {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
 } 
-
-
  .card:hover {
   box-shadow: 0 0 20px rgba(255, 165, 0, 0.6); 
    transform: translateY(-10px);
 } 
-
-
-
 .card i {
   color:var(--primary);
   margin-right: 2px;
 }  
 
-/* .................clothing page.................. */
+/* .........................clothing page....................................... */
 
 .clothingHeader{
 background-image: url(../images/clothingpageimg.jpg);
@@ -264,10 +257,9 @@ background-size: contain;
 object-fit: cover;
 background-repeat: no-repeat;
 margin-top: 65px;
-/* margin-bottom: 20px !important; */
 height: 60vh;
 width: 100%
-   }
+ }
 .clothingHeader h1{
 color: white;
     text-align: start; 
@@ -276,37 +268,30 @@ color: white;
     padding: 70px 80px;
    transition: all 0.3s ease-in-out;  
 }
-  
-    .clothingPage .clothes{
-    height: 420px;
-    margin-bottom: 20px;
-    background-color: var(--gray) !important;
-   } 
-   .clothingPage img{
+   /* .clothingPage img{
     height: 250px;
-   } 
+   }  */
 .btn{
     background-color: var(--primary) !important;
     color: whitesmoke !important;
     margin-top: 10px 0px !important;
  
 }
-/* ................kidspage.......... */
+/* ..........................kidspage..................... */
 .kidsHeader {
     h1{
         color: var(--blue);
         margin-top: 130px;
           transition: all 0.3s ease-in-out; 
-           text-shadow: 8px -3px 5px var(--blue); 
-      
+           text-shadow: 5px -4px 5px var(--blue); 
     }
     p{
         font-size: 17px;
         color: var(--grey);
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, Cochin, Georgia, Times, 'Times New Roman', serif ;
+        /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, Cochin, Georgia, Times, 'Times New Roman', serif ; */
     }
 }
-     .product-card {
+.product-card {
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 10px;
@@ -337,7 +322,7 @@ color: white;
  
 } 
 
-/* .........................jewelrypage............... */
+/* .........................jewelrypage....................... */
 .jewelryHeader{
     background-image: url(../images/jewelrypageimg1.webp);
     background-size: cover;
@@ -356,23 +341,23 @@ color: white;
    transition: all 0.3s ease-in-out;   
   }
   h1:hover{
-    transform: translateY(-10px);
+    transform: translateY(-20px);
   }
  
   .jewelrySection .product-card{
     height: 350px;
   }
-  /* ...........homeSection........... */
+  /* ...................homeSection..................... */
   .homeSection .product-card{
     height: 500px;
   }
-/* ..........decorSection.......... */
+/* ....................decorSection.................. */
 .decorSection .product-card{
     height: 440px;
 }
-/* ........kitchinSection......... */
+/* ................kitchinSection................... */
 .decorSection .product-card p{
-    font-size: 13px;
+    font-size: 15px;
 }
 .product-card a{
   text-decoration: none;
@@ -385,12 +370,11 @@ color: white;
   font-weight:bold;
 }
 .product-card .btn{
-  /* margin-bottom: 200px !important; */
   margin: 8px 0px !important;
 
 }
-/* ..........about................ */
-
+/* ..........................about......................... */
+/* .........header about.......... */
    .hero{
     background-image: url(../images/ourstory.jpg);
     height: 90vh;
@@ -405,30 +389,32 @@ color: white;
     font-size: 100px;
    }
    }
-   /* .story{
-    width: 500px;
-   }
-   .pStory{
-    width: 500px;
-   } */
-    .ourStory{
-     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 60px;
-    gap:40px;
-    max-width: 100%;
-    flex-wrap: wrap;
-    }
-     .story{
-    width: 560px;
-    height: auto;
- }
- .ourStory .container .flex{
-    gap:137px;
- }
-
-   /* ..........load.................. */
+   .storySection {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+}
+.storyText {
+  flex: 1 1 400px;
+  max-width: 600px;
+  h2{
+  font-weight: bold;
+  }
+  p{
+      text-align: justify;
+  }
+}
+.storyImg {
+  flex: 1 1 400px;
+  max-width: 560px;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+}
+   /* ....................load.......................... */
    #loading {
   position: fixed;
   inset: 0;
@@ -443,22 +429,70 @@ color: white;
 #loading p {
   margin-top: 10px;
   font-weight: bold;
-  color: var(--primary2);
+  color: var(--primary);
 }
 #loading .spinner{
    width: 100%; 
    height: 100%;
 }
-#loading p{
-    color: var(--primary);
-}
 #loading #main-content{
-    display:none;
-    
+    display:none; 
 } 
-/* ..................cart................. */
+/* .........................cheakout...................... */
+ .cheakout .logo{
+  margin: 30px 0px;
+ }
+ .cheakout input{
+  background-color: white;
+  border-radius: 100px !important;
+ }
+ .cheakout select{
+  border-radius: 100px ;
+ }
 
+h2 {
+  margin-top: 0;
+  color: #333;
+}
+label {
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+input[type="text"],
+input[type="email"],
+select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
 
+.checkbox {
+  margin-top: 10px;
+}
 
+.name-fields {
+  display: flex;
+  gap: 10px;
+}
+
+.name-fields div {
+  flex: 1;
+}
+.cheakout h3 a{
+  color:var(--primary);
+  text-decoration: none;
+}
+.error-message {
+  color:var(--primary);
+  font-size: 17px;
+  margin-top: 10x;
+  margin-bottom: 10px;
+}
+/* ..............booksection......... */
+.bookSection .product-card{
+  height: 350px;
+}
 
 
